[gd_scene load_steps=4 format=3 uid="uid://dms0brsbalstp"]

[ext_resource type="Script" uid="uid://uqjj73yc4awn" path="res://Scripts/inventory_slot.gd" id="1_ugiaw"]
[ext_resource type="FontFile" uid="uid://bc0vshivviyrq" path="res://Assets/Fonts/ARCADECLASSIC.TTF" id="3_oha2t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iwnb8"]

[node name="Inventory_slot" type="Control"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 120.0
script = ExtResource("1_ugiaw")

[node name="OuterBorderColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(120, 120)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.343861, 0.218931, 0.13914, 1)

[node name="InnerBorder" type="ColorRect" parent="."]
custom_minimum_size = Vector2(116, 116)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -58.0
offset_right = 58.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.445691, 0.270868, 0.180345, 1)

[node name="Itemicon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(70, 70)

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
layout_mode = 0
offset_left = 5.0
offset_right = 45.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.086
anchor_top = 0.086
anchor_right = 0.922
anchor_bottom = 0.914
offset_left = -9.008
offset_top = -9.008
offset_right = 7.98399
offset_bottom = 9.008
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_iwnb8")

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -21.0
offset_top = -135.0
offset_right = 107.0
offset_bottom = -23.0
color = Color(0, 0.541176, 0.282353, 1)

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_fonts/font = ExtResource("3_oha2t")
theme_override_font_sizes/font_size = 40
text = "Name:"

[node name="ItemType" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -20.5
offset_right = 97.0
offset_bottom = 20.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.784314)
theme_override_fonts/font = ExtResource("3_oha2t")
theme_override_font_sizes/font_size = 40
text = "Type:"

[node name="ItemEffect" type="Label" parent="DetailsPanel"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -23.0
offset_right = 45.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.588235)
theme_override_fonts/font = ExtResource("3_oha2t")
theme_override_font_sizes/font_size = 40
text = "Effect:"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 1
offset_top = 2.0
offset_right = 120.0
offset_bottom = 120.0
color = Color(0, 0.541176, 0.282353, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 119.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("3_oha2t")
theme_override_font_sizes/font_size = 40
text = "Use"

[node name="CheckButton" type="Button" parent="UsagePanel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -63.0
offset_right = 119.0
offset_bottom = -2.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_oha2t")
theme_override_font_sizes/font_size = 40
text = "Check"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(60, 60)

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="UsagePanel/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="UsagePanel/CheckButton" to="." method="_on_check_button_pressed"]
